--- a/webappdemo/Views/Home/Index.cshtml
+++ b/webappdemo/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
-﻿@{
+﻿@using Microsoft.DotNet.InternalAbstractions
+@{
     ViewData["Title"] = "Home Page";
+    var SystemInfo = @RuntimeEnvironment.OperatingSystem + " " + @RuntimeEnvironment.OperatingSystemVersion;
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<div id="message">
+    <h2>-- @SystemInfo --</h2>
+    <img src="~/images/wtv.png" />
+</div>
+
+@*<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -63,7 +70,7 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-</div>
+</div>*@
 
 <div class="row">
     <div class="col-md-3">
