タイトル変更

--- a/webappdemo/Views/Home/Index.cshtml
+++ b/webappdemo/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.DotNet.InternalAbstractions
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "WITH THE VISION 2017";
     var SystemInfo = @RuntimeEnvironment.OperatingSystem + " " + @RuntimeEnvironment.OperatingSystemVersion;
 }
 
